<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.inetsoft.test</groupId>
        <artifactId>doctest</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>vsscript</artifactId>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <test.module>vsscript</test.module>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.athaydes</groupId>
            <artifactId>spock-reports</artifactId>
            <version>2.5.1-groovy-4.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.inetsoft.test</groupId>
            <artifactId>commons</artifactId>
            <version>${project.version}</version>
            <type>test-jar</type>
            <scope>system</scope>
            <systemPath>${root.dir}/commons/target/commons-1.0.0-SNAPSHOT-tests.jar</systemPath>
        </dependency>

        <dependency>
        <groupId>com.inetsoft.stylebi.connectors</groupId>
        <artifactId>jdbc-derby</artifactId>
        <version>${project.version}</version>
        <type>zip</type>
        <scope>provided</scope>
        </dependency>

        <dependency>
        <groupId>com.inetsoft.stylebi.connectors</groupId>
        <artifactId>jdbc-derby-client</artifactId>
        <version>${project.version}</version>
        <type>zip</type>
        <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <additionalClasspathElements>
                        <element>${root.dir}/commons/target/test-classes</element>
                        <element>${basedir}/src/test/resources/config/orders.jar</element>
                    </additionalClasspathElements>
                    <argLine>-Xmx1g -Dfile.encoding=UTF-8
                        -XX:ReservedCodeCacheSize=100m -XX:+UseCodeCacheFlushing
                        --add-opens=java.base/jdk.internal.access=ALL-UNNAMED
                        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
                        --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
                        --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
                        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
                        --add-opens=java.base/java.io=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                        --add-opens=java.base/java.net=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                        --add-opens=java.base/java.math=ALL-UNNAMED
                        --add-opens=java.sql/java.sql=ALL-UNNAMED
                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens=java.base/java.time=ALL-UNNAMED
                        --add-opens=java.base/java.text=ALL-UNNAMED
                        --add-opens=java.management/sun.management=ALL-UNNAMED
                    </argLine>
                    <includes>
                        <include>**/*_Spec</include>
                    </includes>
                    <systemPropertyVariables>
                        <show.license.exception>true</show.license.exception>
                        <com.athaydes.spockframework.report.outputDir>target/spock-reports</com.athaydes.spockframework.report.outputDir>
                        <disable.updateAssetDependencies>true</disable.updateAssetDependencies>
                        <sree.home>${basedir}/target/test-resources/server/config-${test.module}</sree.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.inetsoft.stylebi.build</groupId>
                <artifactId>inetsoft-runner-maven-plugin</artifactId>
                <version>${project.version}</version>
                <executions>
                    <execution>
                        <id>configure-server</id>
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>configure</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configFile>src/test/resources/config/inetsoft.yaml</configFile>
                    <backupFile>src/test/resources/config/storage.zip</backupFile>
                    <configDirectory>target/test-resources/server/config-${test.module}</configDirectory>
                    <properties>
                        <license.key>${inetsoft.license.key}</license.key>
                        <log.level.org.apache.ignite>WARN</log.level.org.apache.ignite>
                        <security.enabled>true</security.enabled>
                        <security.login.orgLocation>domain</security.login.orgLocation>
                        <adm.home>${basedir}/target/test-resources/server/config-${test.module}</adm.home>
                        <inetsoft.org.default_org.max.cell.size>10000</inetsoft.org.default_org.max.cell.size>
                    </properties>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <excludes>
                        <exclude>config/**</exclude>
                        <exclude>expectData/**</exclude>
                        <exclude>exportData/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
